@@ -12,6 +12,10 @@ Please describe any modifications that you made to the package in the
 reverse time order.
 
 ==============
+Tag: V00-03-94
+2016-08-30 Mikhail S. Dubrovin
+- AreaDetector.py, PyDetectorAccess.py - add method gain_mask_non_zero, extending features of gain_mask
+	
 Tag: V00-03-93
 2016-08-30 Mikhail S. Dubrovin
 - app/det_ndarr_raw_proc - restrict a number of info messages with list of event codes by 20.
